--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,8 @@
 }
 
 .navbarStyle {
-  padding: .5rem 1rem !important
-}
-
-.title{
-  text-align: center;
-  padding: 8px;
+  padding: .5rem 1rem !important;
+  box-shadow: none;
 }
 
 .profileContent {
