--- a/src/components/ChatInterface.css
+++ b/src/components/ChatInterface.css
@@ -7,6 +7,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     overflow: hidden;
+    position: relative;
 }
 
 .chat-error-banner {
@@ -117,8 +118,12 @@
     width: calc(100% - 32px);
     box-sizing: border-box;
     max-width: 1200px;
-    margin: 0 16px;
+    margin: 0 16px 16px 16px;
     align-items: flex-end;
+    position: sticky;
+    bottom: 0;
+    background-color: #fff;
+    z-index: 10;
 }
 
 .chat-input-form input {
