--- a/src/components/ChatInterface.css
+++ b/src/components/ChatInterface.css
@@ -358,11 +358,10 @@
 }
 
 /* iOS specific touch handling */
-@supports (-webkit-touch-callout: none) {
-    .chat-container {
+@supports (-webkit-touch-callout: none) {    .chat-container {
         /* Fix for iOS virtual keyboard issues */
         height: -webkit-fill-available;
-        height: calc(-webkit-fill-available - 60px); /* Account for navbar only */
+        height: calc(100vh - 60px); /* Account for navbar only */
         padding-bottom: 70px; /* Padding for the input form */
     }
     
